fix scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,9 +5,12 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   -webkit-font-smoothing: antialiased;
-  scroll-behavior: smooth
+  scroll-behavior: smooth;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
 .shortcut {
   font-family: monospace; /* Font giống như trên bàn phím */
   font-size: 1em; /* Kích thước chữ */
